# yeat-gpt

./: .gitignore  README.md  main.py  pyproject.toml  yeat_gpt.ipynb  yeat_lyric_scraper.ipynb
