[project]
name = "yeat-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "gguf>=0.17.1",
    "hf-xet>=1.2.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "mistral-common>=1.8.6",
    "polars>=1.36.1",
    "python-dotenv>=1.2.1",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
